# macroquad_template

./: .gitignore  Cargo.toml  local_build_and_run_web.sh  recompile_web.sh  rename_crate.sh
.github/workflows/: release.yml
src/: main.rs
